# softeq-dev-env

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md
ci/: cmake.groovy
cmake/: AddDoxygenDocsGenerationCommand.cmake  CMakeGraphVizOptions.cmake  CodeCoverage.cmake  Doxyfile.in
docker/: android-aosp10.dockerfile  android-aosp6.dockerfile  android-aosp8.dockerfile  android-aosp_master.dockerfile  cmake-ubuntu18.dockerfile  cmake-ubuntu20.dockerfile  git_config  java.security  yocto.dockerfile
examples/: README.md
examples/aosp/android_latest_arm/: README.md  build_target.sh  prepare_env.sh  sync.sh
examples/aosp/nitrogen6x/: README.md
examples/aosp/nitrogen6x/android6/: README.md  deploy_target.sh  prepare_env.sh  sync.sh
examples/aosp/nitrogen6x/android6/patch_target/: mkimage.patch  mkimage.sh  mksdcard.patch  mksdcard.sh
examples/aosp/nitrogen6x/android8/: README.md  build_target.sh  deploy_target.sh  sync.sh
examples/aosp/x86/: build_target.sh  deploy_target.sh  prepare_env.sh  sync.sh
examples/cmake/cexecutable/: CMakeLists.txt  cexecutable.dockerfile  prepare_env.sh
examples/cmake/cexecutable/src/: main.c
examples/cmake/cexecutable/tests/: CMakeLists.txt  main.cc
examples/yocto/agl/: build_target.sh  flash_sdcard  prepare_env.sh  sync.sh
examples/yocto/beaglebone/: build_target.sh  default.xml  sync.sh
examples/yocto/beaglebone-flutter/: README.md  build_target.sh  default.xml  sync.sh
examples/yocto/beaglebone-flutter/patch/: flutter-app.bbclass.patch
examples/yocto/beaglebone-flutter/sources/meta-beaglebone-flutter/conf/: layer.conf
examples/yocto/beaglebone-flutter/sources/meta-beaglebone-flutter/recipes-graphics/wayland/: weston-init.bbappend
examples/yocto/imx6ull/: prepare_env.sh  sync.sh
examples/yocto/nitrogen6x/: build_target.sh  sync.sh
examples/yocto/raspberry/: README.md  build_target.sh  manifest.xml  prepare_env.sh  sync.sh
examples/yocto/raspberry/sources/meta-systemd-tweaks/conf/: layer.conf
examples/yocto/tinyarm/: manifest.xml  project.setup
examples/yocto/x86/: build_target.sh  prepare_env.sh  sync.sh
formatting/: .clang-format
ide/: README.md
ide/vscode/: launch.json  tasks.json
scripts/: aosp-entrypoint.sh  cmake-entrypoint.sh  common-entrypoint.sh  common-launcher  completion.bash  profile.bash
yocto/: dependency-graph
(+5 files in other folders)
